[gd_scene load_steps=5 format=3 uid="uid://bvreou4uydewr"]

[ext_resource type="Script" uid="uid://bifljwxt63xrf" path="res://spawner.gd" id="1_yxytf"]
[ext_resource type="AudioStream" uid="uid://i5vi7iyxsj4t" path="res://Plants vs. Zombies Wave Sound Effect.mp3" id="2_exyh5"]
[ext_resource type="AudioStream" uid="uid://bu5k1qberw8h6" path="res://Zombie Survival OST HQ [Full Soundtrack].mp3" id="3_0rx2b"]
[ext_resource type="AudioStream" uid="uid://daxv7jfhwhg2e" path="res://Click Sound Effect changed.mp3" id="4_h0p6u"]

[node name="spawner" type="Node2D"]
script = ExtResource("1_yxytf")

[node name="spawntimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="WaveBegun" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_exyh5")
volume_db = -10.0

[node name="WaveMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0rx2b")
volume_db = -16.0

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_h0p6u")

[connection signal="timeout" from="spawntimer" to="." method="_on_timer_timeout"]
